# pardus-pen

./: .gitignore  Readme.md  meson.build  meson_options.txt  test.sh  tr.org.pardus.pen.yaml  update-translation.sh
.github/workflows/: blank.yml
appimage/: AppRun  create_appimage.sh
data/: genresource.sh  pardus-pen.desktop  resources.qrc  tr.org.pardus.pen.appdata.xml  tr.org.pardus.pen.appdata.xml.in  tr.org.pardus.pen.default.conf  tr.org.pardus.pen.desktop  tr.org.pardus.pen.desktop.in  tr.org.pardus.pen.gschema.xml  tr.org.pardus.pen.mime.xml
debian/: changelog  control  copyright  meson.build  pardus-pen.substvars  rules
include/: constants.h
include/tools/: color.h
include/utils/: Archive.h  Selection.h  Storage.h  eta-keyboard.h
include/widgets/: Button.h  DrawingWidget.h  FloatingWidget.h  OverView.h  ScreenshotWidget.h
po/: POTFILES  es.po  pardus-pen.pot  pt.po  tr.po
po/tr/LC_MESSAGES/: pardus-pen.mo
src/: Archive.cpp  Archive.h  Button.cpp  Button.h  DrawingWidget.cpp  DrawingWidget.h  FloatingSettings.cpp  FloatingSettings.h  FloatingWidget.cpp  FloatingWidget.h  Geometry.cpp  OverView.cpp  OverView.h  ScreenShot.cpp  ScreenShot.h  Selection.cpp  Selection.h  SetupWidgets.cpp  WhiteBoard.cpp  WhiteBoard.h  constants.h  main.cpp  screenshot.cpp  settings.c  settings.h  tools.h  which.c
src/tools/: background.cpp  color.h  eraser.h  icon.cpp  mainWindow.cpp  pagemode.h  pen.cpp  save-load.cpp  screenshot.cpp  tools.h  update.cpp
src/utils/: Archive.cpp  Archive.h  Geometry.cpp  ScreenShot.cpp  ScreenShot.h  ScreenShotXdg.c  Selection.cpp  Settings.cpp  Settings.h  Storage.cpp  eta-keyboard.cpp  misc.c  misc.h  pdf.cpp  settings.c  settings.h  which.c  which.h
src/widgets/: Background.cpp  Background.h  Button.cpp  Button.h  DrawingWidget.cpp  DrawingWidget.h  FloatingSettings.cpp  FloatingSettings.h  FloatingWidget.cpp  FloatingWidget.h  OverView.cpp  OverView.h  ScreenshotWidget.cpp  ScreenshotWidget.h  WhiteBoard.cpp  WhiteBoard.h
