option('qt', type: 'string', value: '5')
option('resources', type : 'boolean', value : true)
option('save', type : 'boolean', value : true)
option('etap19', type : 'boolean', value : false)
option('screenshot', type : 'boolean', value : true)
option('pdf', type : 'boolean', value : true)
option('fix1', type : 'boolean', value : false)
option('history', type : 'string', value : '15')
