option('qt', type: 'string', value: '5')
option('backgrounds', type: 'string', value: '/usr/share/pardus/pardus-pen/backgrounds')
option('resources', type : 'boolean', value : true)
option('save', type : 'boolean', value : true)
option('etap19', type : 'boolean', value : false)
option('screenshot', type : 'boolean', value : true)
option('pdf', type : 'boolean', value : true)
option('fix1', type : 'boolean', value : false)
